--- a/sample.yaml
+++ b/sample.yaml
@@ -9,3 +9,12 @@ development:
       username: example_username
       password: example_password
       operational: true
+
+production:
+  source: /some/directory/path
+  verbose: true
+  credentials:
+    - hostname: example_hostname
+      username: example_username
+      password: example_password
+      operational: true
